<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_spices"
    android:fitsSystemWindows="true"
    tools:context=".MainToolBar">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eb5f4f46"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_weight="1"
            android:background="#aba2ac8f"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/appel_serveur"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="44dp"
                android:text="@string/appel_button" />

            <Button
                android:id="@+id/authentification"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="44dp"
                android:text="@string/authentification_button" />
        </RelativeLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="#c14a4a"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TextView.PopupMenu">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_4" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_5" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="565dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="57dp">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#c8453f38">

        <RelativeLayout
            android:layout_width="1048dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:text="A régler"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="#FFFF"
                android:textStyle="bold"
                tools:text="0" />

            <TextView
                android:id="@+id/a_regler"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView13"
                android:textSize="18sp"
                android:textColor="#FFFF"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="1383dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:text="Total sélectionné"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#FFFF"

                android:textStyle="bold"
                tools:text="0" />

            <TextView
                android:id="@+id/total_selection"
                android:layout_width="91dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView14"
                android:textSize="18sp"
                android:textColor="#FFFF"

                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:layout_width="921dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="Button"
            android:visibility="gone" />

    </LinearLayout>


</RelativeLayout>